<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grMessage">
        <item
            android:id="@+id/homeMessenger"
            android:icon="@drawable/chat"
            android:title="@string/home_messenger_title" />

        <item
            android:id="@+id/waitingMessage"
            android:icon="@drawable/chat_wait"
            android:title="@string/wait_message_title" />

    </group>

    <group android:id="@+id/grCommunity">
        <item
            android:id="@+id/itCommunity"
            android:enabled="false"
            android:title="@string/see_more">
            <menu>
                <item
                    android:id="@+id/communityFragment"
                    android:icon="@drawable/community"
                    android:title="@string/community_title" />
                <item
                    android:id="@+id/friendInvitationFragment"
                    android:icon="@drawable/invitation"
                    android:title="@string/friend_invitation" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/grSetting">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/setting"
            android:title="@string/setting_title" />
    </group>
</menu>