<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".account.fragment.AccountInfoFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <ImageView
                android:id="@+id/imgBackAccountInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:contentDescription="@string/back"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="@id/tvTitleAccountInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitleAccountInfo" />

            <TextView
                android:id="@+id/tvTitleAccountInfo"
                style="@style/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_info"
                android:transitionName="title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/imgTitleAccountInfo"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:transitionName="animation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleAccountInfo"
                app:lottie_autoPlay="true"
                app:lottie_fileName="animation_lottie/account_info.lottie"
                app:lottie_loop="true" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAccountInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:elevation="@dimen/_8sdp"
                android:transitionName="card"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgTitleAccountInfo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlRegisterSuccess"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_256sdp"
                    android:padding="@dimen/_12sdp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvRegisterSuccess"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_successfully"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/backToLogin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tvNameTitle"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvNameTitle"
                        app:shapeAppearance="@style/corner_20">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtName"
                            style="@style/normal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/info"
                            android:imeOptions="actionNext"
                            android:maxLength="30"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvBirthdayTitle"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/birthday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilName" />

                    <TextView
                        android:id="@+id/tvBirthday"
                        style="@style/normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/border_text"
                        android:maxLines="1"
                        android:text="@string/default_birthday"
                        app:drawableEndCompat="@drawable/birthday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvBirthdayTitle" />

                    <TextView
                        android:id="@+id/tvPhoneTitle"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/phone_number"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvBirthday" />

                    <TextView
                        android:id="@+id/tvAreaCode"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/border_text"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/phone_VN"
                        app:drawableStartCompat="@drawable/drop_down"
                        app:layout_constraintEnd_toStartOf="@id/tilPhone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPhoneTitle" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/phone_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvAreaCode"
                        app:layout_constraintBaseline_toBaselineOf="@id/tvAreaCode"
                        app:layout_constraintTop_toBottomOf="@id/tvPhoneTitle"
                        app:shapeAppearance="@style/corner_20">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPhone"
                            style="@style/normal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="11"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/confirm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tilPhone" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loading"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="animation_lottie/loading.lottie"
                app:lottie_loop="true" />
        </FrameLayout>
    </FrameLayout>

</androidx.core.widget.NestedScrollView>