<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".account.fragment.ForgotPasswordFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <ImageView
                android:id="@+id/imgBackForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:contentDescription="@string/back"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="@id/tvTitleForgotPass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitleForgotPass" />

            <TextView
                android:id="@+id/tvTitleForgotPass"
                style="@style/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPass"
                android:transitionName="title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/imgTitleForgotPass"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:transitionName="animation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleForgotPass"
                app:lottie_autoPlay="true"
                app:lottie_fileName="animation_lottie/forget_pass.lottie"
                app:lottie_loop="true" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:elevation="@dimen/_8sdp"
                android:transitionName="card"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgTitleForgotPass">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlForgotPasswordSuccess"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_256sdp"
                    android:padding="@dimen/_12sdp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvForgotPasswordSuccess"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_forgot_pass"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/backToLogin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp">

                    <TextView
                        android:id="@+id/tvInfoAccountTitle"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_account_info"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmailForgotPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:hint="@string/gmail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvInfoAccountTitle"
                        app:shapeAppearance="@style/corner_20">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmailForgotPass"
                            style="@style/normal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLength="30" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilNameForgotPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:hint="@string/nameUser"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilEmailForgotPass"
                        app:shapeAppearance="@style/corner_20">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtNameForgotPass"
                            style="@style/normal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textNoSuggestions"
                            android:maxLength="20" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/confirm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tilNameForgotPass" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loading"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="animation_lottie/loading.lottie"
                app:lottie_loop="true" />
        </FrameLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>