<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    tools:context=".mess.fragment.home.UserFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/svUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:queryHint="@string/search_here" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvGroup"
                style="@style/normal_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:drawablePadding="@dimen/_8sdp"
                android:text="@string/group"
                app:drawableStartCompat="@drawable/community"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvUser" />

            <TextView
                android:id="@+id/tvList"
                style="@style/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGroup" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvList"
                tools:listitem="@layout/user_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loading"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="animation_lottie/loading.lottie"
                app:lottie_loop="true" />
        </FrameLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>